--- a/WcfWCService/Web.config
+++ b/WcfWCService/Web.config
@@ -23,7 +23,7 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://vsrs11.rs.local:80/Windchill/servlet/MyJavaService"
+      <endpoint address="http://vsrs11.vr.local:80/Windchill/servlet/MyJavaService"
         binding="customBinding" bindingConfiguration="MyJavaServicePortBinding"
         contract="ExampleService.MyJavaService" name="MyJavaServicePort" />
     </client>
