--- a/WcfWCService/Web.config
+++ b/WcfWCService/Web.config
@@ -8,7 +8,7 @@
   <system.serviceModel>
     <bindings>
       <customBinding>
-        <binding name="MyJavaServicePortBinding">
+        <binding name="MyJavaService3PortBinding">
           <!--The wsdl schema that was used to create this configuration file contained a 'RequireIssuerSerialReference' assertion for a X509Token.  This can not be represented in configuration, you will need to programatically adjust the appropriate X509SecurityTokenParameters.X509KeyIdentifierClauseType to X509KeyIdentifierClauseType.IssuerSerial.  The default of X509KeyIdentifierClauseType.Thumbprint will be used, which may cause interop issues.-->
           <security defaultAlgorithmSuite="Basic128" authenticationMode="UserNameForCertificate"
             requireDerivedKeys="false" securityHeaderLayout="Lax" includeTimestamp="true"
@@ -23,9 +23,9 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://vsrs11.vr.local:80/Windchill/servlet/MyJavaService"
-        binding="customBinding" bindingConfiguration="MyJavaServicePortBinding"
-        contract="ExampleService.MyJavaService" name="MyJavaServicePort" />
+      <endpoint address="http://vsrs24.vr.local:80/Windchill/servlet/MyJavaService3"
+        binding="customBinding" bindingConfiguration="MyJavaService3PortBinding"
+        contract="ExampleService.MyJavaService3" name="MyJavaService3Port" />
     </client>
     <services>
       <service name="WcfWCService.Service1">
