--- a/WcfWCService/packages.config
+++ b/WcfWCService/packages.config
@@ -5,4 +5,6 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
 </packages>
